adding call reports and connecting it to customers(new) and products
